'fix)transformer_code_explanation.ipynb'

--- a/transformer_code_explanation.ipynb
+++ b/transformer_code_explanation.ipynb
@@ -5,7 +5,10 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "collapsed_sections": []
+      "collapsed_sections": [
+        "19TZmlZi854y",
+        "u7XOe3jSXHCs"
+      ]
     },
     "kernelspec": {
       "name": "python3",
