--- a/transformer_code_explanation.ipynb
+++ b/transformer_code_explanation.ipynb
@@ -51,45 +51,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NS2ZhNLOEGTH",
-        "outputId": "74a2a82d-f36a-444f-b4f3-0cef42ef192e"
+        "id": "NS2ZhNLOEGTH"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: transformers==4.7 in /usr/local/lib/python3.7/dist-packages (4.7.0)\n",
-            "Requirement already satisfied: pyyaml in /usr/local/lib/python3.7/dist-packages (from transformers==4.7) (6.0)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.7/dist-packages (from transformers==4.7) (2022.6.2)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from transformers==4.7) (2.23.0)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.7/dist-packages (from transformers==4.7) (3.8.0)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.7/dist-packages (from transformers==4.7) (21.3)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.7/dist-packages (from transformers==4.7) (4.64.0)\n",
-            "Requirement already satisfied: sacremoses in /usr/local/lib/python3.7/dist-packages (from transformers==4.7) (0.0.53)\n",
-            "Requirement already satisfied: tokenizers<0.11,>=0.10.1 in /usr/local/lib/python3.7/dist-packages (from transformers==4.7) (0.10.3)\n",
-            "Requirement already satisfied: huggingface-hub==0.0.8 in /usr/local/lib/python3.7/dist-packages (from transformers==4.7) (0.0.8)\n",
-            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from transformers==4.7) (4.12.0)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.7/dist-packages (from transformers==4.7) (1.21.6)\n",
-            "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->transformers==4.7) (4.1.1)\n",
-            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->transformers==4.7) (3.8.1)\n",
-            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging->transformers==4.7) (3.0.9)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->transformers==4.7) (3.0.4)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->transformers==4.7) (1.24.3)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->transformers==4.7) (2.10)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->transformers==4.7) (2022.6.15)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers==4.7) (1.15.0)\n",
-            "Requirement already satisfied: joblib in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers==4.7) (1.1.0)\n",
-            "Requirement already satisfied: click in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers==4.7) (7.1.2)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Tokenizer 사용을 위한 라이브러리 설치\n",
         "!pip install transformers==4.7"
@@ -97,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "s4rB9YXlIM_0"
       },
@@ -114,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Gl56R2j5IJBa"
       },
@@ -127,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "FV0mTkCqIRWk"
       },
@@ -148,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "VxGS4OAeIc7b"
       },
@@ -184,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "eZQ_bLrLWYS3"
       },
@@ -202,12 +168,12 @@
         "    pe[:, 1::2] = torch.cos(position[:, 1::2] / div_value) # cos for 2i+1\n",
         "    pe = pe.unsqueeze(0) # [bs(1), seq_len, d_model]\n",
         "    \n",
-        "    return pe"
+        "    return "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "SCqVSD5D9IRn"
       },
@@ -218,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -261,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "AZTSuwrgZ5av"
       },
@@ -292,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "Z0NnMX2wY53s"
       },
@@ -300,13 +266,13 @@
       "source": [
         "# mask for padding. shape of attention matrix. \n",
         "# it's used for encoder self attention, decoder self attention, decoder cross attention\n",
-        "def get_attn_pad_mask(key_inputs, pad_id, query_len):\n",
-        "    return key_inputs.eq(pad_id).unsqueeze(1).expand(-1, query_len, -1) # [bs, query_len, key_len]"
+        "def get_attn_pad_mask(key_inputs, pad_id, query_len):                   # self_attention : [bs, query_len, query_len]\n",
+        "    return key_inputs.eq(pad_id).unsqueeze(1).expand(-1, query_len, -1) # cross_attention : [bs, query_len, key_len]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -336,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "VxFXLFtJGG0g"
       },
@@ -352,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -416,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "x4SzS-cE7Xj9"
       },
@@ -458,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "-m6InKPCU4Nj"
       },
@@ -495,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "uljzjsBGolXm"
       },
@@ -526,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "JtKgPxOiypgO"
       },
@@ -568,7 +534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "iAM-K4yyqUiN"
       },
@@ -580,15 +546,21 @@
         "        self.config = config\n",
         "        self.word_embedding = nn.Embedding(config.vocab_size, config.d_model, padding_idx=config.pad_id)\n",
         "        self.sqrt_dim = math.sqrt(config.d_model)\n",
-        "        self.pos_encoding = PositionalEncoding(config.max_seq_len, config.d_model)\n",
+        "        self.pos_encoding = PositionalEncoding(config.max_enc_len, config.d_model)\n",
         "\n",
         "        self.layers = nn.ModuleList(\n",
         "            [TransformerEncoderLayer(config) for _ in range(config.num_enc_layers)]\n",
         "        )\n",
         "\n",
-        "    def forward(self, enc_inputs, self_attn_mask):\n",
+        "    def forward(self, enc_inputs, self_attn_mask=None):\n",
         "        outputs = self.word_embedding(enc_inputs) * self.sqrt_dim + self.pos_encoding.to(enc_inputs.device)\n",
-        "        \n",
+        "\n",
+        "        if self_attn_mask == None:\n",
+        "            self_attn_mask = get_attn_pad_mask(enc_inputs, self.config.pad_id, enc_inputs.size(1))\n",
+        "            \n",
+        "        else:\n",
+        "            self_attn_mask = get_attn_pad_mask(self_attn_mask, 0, self_attn_mask.size(1))\n",
+        "\n",
         "        self_attn_probs = []\n",
         "        for layer in self.layers:\n",
         "            outputs, self_attn_prob = layer(outputs, self_attn_mask)\n",
@@ -599,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "YCZ-U8xk7XhG"
       },
@@ -664,7 +636,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "pHhfkzfIGG3J"
       },
@@ -739,7 +711,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "pBy50vMHoUqM"
       },
@@ -776,7 +748,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "K88n-oRJGGvB"
       },
@@ -789,7 +761,29 @@
         "        self.encoder = TransformerEncoder(config)\n",
         "        if config.use_decoder == True:\n",
         "            self.decoder = TransformerDecoder(config)\n",
-        "            self.fc = nn.Linear(config.d_model, config.vocab_size)\n",
+        "        \n",
+        "        self.init_weights()\n",
+        "\n",
+        "    def init_weights(self):\n",
+        "        # Initialize weights for each layer\n",
+        "        self.apply(self.init_layer_weights)\n",
+        "\n",
+        "    # ref huggingface\n",
+        "    # https://huggingface.co/transformers/v4.9.2/_modules/transformers/models/electra/modeling_electra.html#ElectraPreTrainedModel\n",
+        "    def init_layer_weights(self, module):\n",
+        "        if isinstance(module, nn.Linear):\n",
+        "            module.weight.data.normal_(mean=0.0, std=self.config.init_std)\n",
+        "            if module.bias is not None:\n",
+        "                module.bias.data.zero_()\n",
+        "        elif isinstance(module, nn.Embedding):\n",
+        "            module.weight.data.normal_(mean=0.0, std=self.config.init_std)\n",
+        "            if module.padding_idx is not None:\n",
+        "                module.weight.data[module.padding_idx].zero_()\n",
+        "        elif isinstance(module, nn.LayerNorm):\n",
+        "            module.bias.data.zero_()\n",
+        "            module.weight.data.fill_(1.0)\n",
+        "            module.eps = self.config.norm_eps\n",
+        "\n",
         "    def forward(self, \n",
         "                enc_inputs, \n",
         "                dec_inputs=None, \n",
@@ -797,23 +791,16 @@
         "                dec_self_attn_mask=None,\n",
         "                dec_cross_attn_mask=None):\n",
         "        \n",
-        "        if enc_self_attn_mask == None:\n",
-        "            enc_self_attn_mask = get_attn_pad_mask(enc_inputs, self.config.pad_id, enc_inputs.size(1))\n",
-        "\n",
         "        enc_outputs, enc_self_attn_probs = self.encoder(enc_inputs, enc_self_attn_mask)\n",
         "        \n",
         "        if self.config.use_decoder == False:\n",
-        "            return {'encoder_hidden_states' : enc_outputs, \n",
-        "                    'encoder_self_attention_prob' : enc_self_attn_probs}\n",
+        "            return enc_outputs, enc_self_attn_probs\n",
         "        \n",
         "        dec_outputs, dec_self_attn_probs, dec_cross_attn_probs = self.decoder(dec_inputs,\n",
         "                                                                              enc_outputs, \n",
         "                                                                              enc_inputs)\n",
         "        \n",
-        "        return {'decoder_hidden_states' : dec_outputs, \n",
-        "                'encoder_self_attention_prob' : enc_self_attn_probs, \n",
-        "                'decoder_self_attention_prob' : dec_self_attn_probs, \n",
-        "                'decoder_cross_attention_prob' : dec_cross_attn_probs}"
+        "        return dec_outputs, enc_self_attn_probs, dec_self_attn_probs, dec_cross_attn_probs"
       ]
     },
     {
@@ -827,7 +814,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -865,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "2KLBrcfeZv1F"
       },
@@ -876,7 +863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "UrDJ1nKuGGxo"
       },
@@ -887,7 +874,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "64FYJpTJUQx0"
       },
@@ -898,7 +885,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -924,7 +911,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -950,7 +937,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "w30wwbMlXeVv"
       },
@@ -961,7 +948,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "xAIEfkGRXeYW"
       },
@@ -972,7 +959,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "8thecDiBXeav"
       },
@@ -983,7 +970,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1009,7 +996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1035,7 +1022,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "zo9-3eI5XpgN"
       },
@@ -1046,7 +1033,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1072,7 +1059,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "3kleGZrr7NnM"
       },
@@ -1086,7 +1073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "0wj1NBjygvKZ"
       },
@@ -1098,8 +1085,7 @@
     "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [
-        "19TZmlZi854y",
-        "u7XOe3jSXHCs"
+        "19TZmlZi854y"
       ],
       "machine_shape": "hm",
       "provenance": []
